# transformers-attention-viz

./: .gitignore  CONTRIBUTING.md  FIX_NUMPY_ISSUE.md  Makefile  README.md  SETUP_INSTRUCTIONS.md  comprehensive_test_suite.py  debug.sh  debug_attention.py  demo.ipynb  fix_mypy.py  pyproject.toml  quick_test_script.sh  requirements.txt  setup.cfg  setup.py  test_implementation.py  verify.py
.github/workflows/: ci.yml
attention_viz/: __init__.py  core.py  utils.py  version.py
attention_viz/dashboard/: __init__.py  app.py
attention_viz/extractors/: __init__.py  base.py  model_adapters.py
attention_viz/visualizers/: __init__.py  comparison.py  evolution.py  flow.py  heatmap.py
docs/: api_reference.md  installation.md
examples/: basic_usage.ipynb  demo.ipynb  download_examples.py
tests/: conftest.py  test_basic.py
